Guns working on client

--- a/zeke.html
+++ b/zeke.html
@@ -1,5 +1,9 @@
 <html>
   <canvas id="screen" style="margin:auto"></canvas>
-  <script type="text/javascript" src="ships.js"></script>
+  <script type="text/javascript" src="canvas.js"></script>
+  <script type="text/javascript" src="protocol.js"></script>
+  <script type="text/javascript" src="body.js"></script>
+  <script type="text/javascript" src="player.js"></script>
+  <script type="text/javascript" src="gun.js"></script>
   <script type="text/javascript" src="io.js"></script>
 <html>
